<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon_foreground" />
    <item
        android:id="@+id/fill_out_templates"
        android:title="@string/fill_out_templates"
        android:icon="@drawable/profile_icon_foreground" />
    <item
        android:id="@+id/my_cards"
        android:title="@string/my_cards"
        android:icon="@drawable/profile_icon_foreground" />
    <item
        android:id="@+id/send_cards"
        android:title="@string/send_cards"
        android:icon="@drawable/profile_icon_foreground" />
    <item
        android:id="@+id/friend_menu"
        android:title="@string/friend_menu"
        android:icon="@drawable/profile_icon_foreground" />
</menu>